# chart-monitor

./: .chart-monitor-token  .gitignore  README.md
.agent/rules/: specify-rules.md
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/engine/: executor.py  extractor.py  injector.py  pipeline.py
backend/src/models/: collector.py  dashboard.py
backend/src/storage/: git_sync.py  poller.py  store.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_contracts.py
backend/tests/unit/: test_executor_security.py  test_extractor.py  test_injector.py
frontend/src/: app.js  index.html  styles.css
k8s/: chart-monitor-sa.yaml
specs/001-core-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-engine/checklists/: requirements.md
specs/001-core-engine/contracts/: api.md
specs/001-ui-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-enhancements/checklists/: requirements.md
specs/001-ui-enhancements/contracts/: ui-contracts.md
specs/002-gitops-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gitops-sync/checklists/: requirements.md
specs/002-gitops-sync/contracts/: sync-api.md
store/: github_dashboard.py  github_prs.py  http_collector.py  pods_collector.py  pods_dashboard.py
